--- a/책/우아한타입스크립트-with-리액트/02.타입.md
+++ b/책/우아한타입스크립트-with-리액트/02.타입.md
@@ -48,3 +48,82 @@
 런타임
 
 - 컴파일타임 이후 변환된 파일이 **메모리에 적재되어 실행되는 시점**
+
+## 강타입과 약타입
+
+암묵적 타입 변환(Implicit coercion conversion)
+
+- 의도적으로 타입을 명시하거나 바꾸지 않았는데도 컴파일러 또는 엔진 등에 의해서 **런타임에 타입이 자동으로 변경**되는 것
+
+암묵적 타입 변환 **여부**에 따라 타입 시스템을 강타입과 약타입으로 분류한다.
+
+강타입(strongly type)
+
+- 서로 다른 타입을 갖는 값끼리 연산을 시도하면 컴파일러 또는 인터프리터에서 **에러 발생**
+- 타입스크립트
+
+약타입(weakly type)
+
+- 서로 다른 타입을 갖는 값끼리 연산을 시도하면 컴파일러 또는 인터프리터가 내부적으로 판단해서 특정값의 **타입을 변환**하여 연산을 수행
+- 자바스크립트
+
+---
+
+두 가지 타입 시스템
+
+- 어떤 타입을 사용하는지를 컴파일러에 **명시적으로 알려줘야 하는** 타입 시스템
+- **자동으로 타입을 추론하는** 타입 시스템
+
+## 구조적 타이핑
+
+명목적 타입 시스템(Nominal Reified Type Systems)
+
+- 여러 프로그래밍 언어에서 타입은 **이름으로 구분**되며 컴파일타임 이후에도 남아있다.
+
+구조적 타이핑(Structural Type System)
+
+- 타입스크립트는 **구조**로 타입을 구분한다.
+
+## 구조적 서브타이핑
+
+객체가 가지고 있는 **속성(프로퍼티)을 바탕으로 타입을 구분**한다.
+
+타입 A가 타입 B의 서브타입이라면 A 타입의 인스턴스는 B 타입이 필요한 곳에 언제든지 위치할 수 있다.
+
+## 덕 타이핑과 구조적 타이핑
+
+둘 다 객체 변수, 메서드 같은 필드를 기반으로 타입을 검사한다는 공통점이 있다.
+
+덕 타이핑(duck typing)
+
+- 런타임에 타입 검사
+- 주로 동적 타이핑에서 사용
+- 자바스크립트
+
+구조적 타이핑
+
+- 컴파일타임에 타입 검사
+- 주로 정적 타이핑에서 사용
+- 타입스크립트
+
+## 타입스크립트의 점진적 타입 확인
+
+타입스크립트는 점진적으로 타입을 확인하는 언어다.
+
+점진적 타입 검사
+
+- 컴파일 타임에 타입을 검사하면서 필요에 따라 **타입 선언 생략**을 허용
+
+## 값 vs 타입
+
+타입스크립트에서 자바스크립트의 키워드가 해석되는 방식
+
+| 키워드          | 값  | 타입 |
+| --------------- | :-: | :--: |
+| class           |  Y  |  Y   |
+| const, let, var |  Y  |  N   |
+| enum            |  Y  |  Y   |
+| function        |  Y  |  N   |
+| interface       |  N  |  Y   |
+| type            |  N  |  Y   |
+| namespace       |  Y  |  N   |
