--- a/책/우아한타입스크립트-with-리액트/02.타입.md
+++ b/책/우아한타입스크립트-with-리액트/02.타입.md
@@ -127,3 +127,36 @@
 | interface       |  N  |  Y   |
 | type            |  N  |  Y   |
 | namespace       |  Y  |  N   |
+
+## 원시 타입
+
+원시 값과 원시 래퍼 객체
+
+- 자바스크립트에서 파스칼 표기법으로 표기하는 타입은 **원시 래퍼 객체**라고 부른다.
+  - ex) Boolean, String, Symbol, ...
+- null과 undefined를 제외한 모든 원시 값은 해당 **원시 값을 래핑한 객체를 가진다**.
+- 타입스크립트의 내장 원시 타입과 구분해야 한다.
+
+타입스크립트의 원시 타입
+
+- boolean
+- undefined
+- null
+- number
+- bigInt
+- string
+- symbol
+
+## 객체 타입
+
+- object
+  - any 타입과 유사하게 **객체에 해당하는 모든 타입 값을 유동적으로 할당**할 수 있어 가급적 사용하지 않는 것을 권장
+- {}
+- array
+  - 타입스크립트의 배열 타입은 **하나의 타입 값만** 가질 수 있다.
+  - 원소 개수는 타입에 영향을 주지 않는다.
+- type, interface
+  - 주로 객체를 타이핑하기 위해 사용
+- function
+  - **호출 시그니처**를 정의하는 방식으로 함수 자체의 타입 지정
+  - ex) `type add = (a: number, b: number) => number;`
